sample/misc/error/eval_match_let-top.bfr
let a :: b =
  let _ = 12345 in
  ()

codegen []